k8s/redis-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ss-shrine-redis
  labels:
    app.kubernetes.io/name: redis
    helm.sh/chart: redis-0.2.1
    app.kubernetes.io/instance: ss-shrine-redis
    app.kubernetes.io/managed-by: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: redis
      protocol: TCP
      name: redis
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: ss-shrine-redis
