k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ss-shrine
  labels:
    app: ss-shrine
    ref: develop
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: ss-shrine
    ref: develop
